<resources>
    <string name="app_name">Thermal Monitor</string>
    <string name="offline">offline</string>
    <string name="overlay_settings">overlay settings</string>
    <string name="start_service">start service</string>
    <string name="stop_service">stop service</string>
    <string name="licenses">Licenses</string>
    <string name="interval_must_be_at_least_500ms">Interval must be at least 500ms</string>
    <string name="monitor_not_supported_with_supplied_preferences">Monitor not supported with supplied preferences</string>
    <string name="preferences">Preferences</string>
    <string name="check_compatibility">Check compatibility</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="service_status">Service status</string>
    <string name="stopped">stopped</string>
    <string name="start">start</string>
    <string name="running">running</string>
    <string name="stop">stop</string>
    <string name="starting">starting…</string>
    <string name="error">error</string>
    <string name="timeout">Timeout</string>
    <string name="timedOutWaitingForServiceToStart">Timed out waiting for service to start.</string>
    <string name="rootAccessDenied">Root access denied</string>
    <string name="couldNotAcquireRootAccess">Could not acquire root access. Make sure your devices is rooted and you permitted root access for this application.</string>
    <string name="thermalMonitoringNotAvailable">Thermal Monitoring not available</string>
    <string name="sysClassThermalDoesNotExist">/sys/class/thermal does not exist. This application may not work on your device. Try enabling root, if available.</string>
    <string name="noValidThermalZonesAreEnabled">No valid thermal zones are enabled.</string>
    <string name="couldNotReadThermalZones">Couldn\'t read thermal zones using root. This application may not work on your device.</string>
    <string name="canNotReadTypeOfAThermalZone">Can\'t read type of a thermal zone. This application may not work on your device. Try enabling root, if available.</string>
    <string name="canNotReadTypeOfAThermalZoneRoot">Can\'t read type of a thermal zone. This application may not work on your device.</string>
    <string name="canNotReadTemperatureOfAThermalZone">Can\'t read temp of a thermal zone. This application may not work on your device. Try enabling root, if available.</string>
    <string name="canNotReadTemperatureOfAThermalZoneRoot">Can\'t read temp of a thermal zone. This application may not work on your device.</string>
    <string name="noRootIpcObjectPassedToMonitor">No root IPC object passed to monitor (root globally disabled?).</string>
    <string name="unknownError">Unknown error.</string>
    <string name="monitorConfigurationInvalid">Monitor configuration invalid. Please try to reset the application.</string>
    <string name="cpuFrequencyMonitoringNotAvailable">CPU frequency monitoring not available</string>
    <string name="sysDevicesSystemCpuDoesNotExist">/sys/devices/system/cpu does not exist.</string>
    <string name="canNotFindAnyCpusInSysDevicesSystemCpu">Can\'t find any CPUs in /sys/devices/system/cpu.</string>
    <string name="canNotReadFrequencyOfACpu">Can\'t read frequency of a CPU.</string>
    <string name="enableRootGloballyFirstToUseThisFeature">Enable root globally first to use this feature.</string>
    <string name="noThermalZonesFound">No thermal zones found. This application may not work on your device. Try enabling root, if available.</string>
    <string name="noThermalZonesFoundRoot">No thermal zones found. This application may not work on your device.</string>
    <string name="couldNotFindAnyThermalZones">Could not find any thermal zones</string>
    <string name="topLeft">Top Left</string>
    <string name="topRight">Top Right</string>
    <string name="bottomLeft">Bottom Left</string>
    <string name="bottomRight">Bottom Right</string>
    <string name="recommended">Recommended</string>
    <string name="other">Other</string>
    <string name="excluded">Excluded</string>
    <string name="monitorExitedWithException">Monitor exited with exception (check compatibility)</string>
    <string name="thermalMonitorNotSupportedWithCurrentConfiguration">Thermal monitor not supported with current configuration</string>
    <string name="cpuFrequencyMonitorNotSupportedWithCurrentConfiguration">CPU frequency monitor not supported with current configuration</string>
    <string name="id">ID</string>
    <string name="current_value">Current value</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="theModuleSeemsToBeWorkingCorrectlyOnThisDeviceUsingTheCurrentSettings">The module seems to be working correctly on this device using the current settings.</string>
    <string name="success">Success</string>
    <string name="version">Version</string>
    <string name="developed_by_sascha_brunner">Developed by Sascha Brunner</string>
    <string name="contact_killerirus_gmail_com">Contact: killerirus@gmail.com</string>
    <string name="title_activity_first_time_setup">Setup</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="next">next</string>
    <string name="finish">finish</string>
    <string name="welcome_text">This application allows you to monitor the temperature of your device as you\'re using it.\n\nThis wizard will guide you through the steps required to setup this application on your device.\n\nPlease keep in mind, that this application relies on the manufacturers support of exposing the component temperatures, thus it may not work on every device. On some devices root access is required.</string>
    <string name="welcome">Welcome</string>
    <string name="overlay">Overlay</string>
    <string name="overlay_permission_not_enabled_text">Overlay permission not enabled, open overlay settings to enable.</string>
    <string name="overlay_permission_not_enabled">Overlay permission not enabled</string>
    <string name="overlay_permission_explanation">For the application to work, you need to enable a special permission, allowing this application to draw overlays over other applications. Press the button below to open the Android system dialog where you can enable this setting.</string>
    <string name="overlay_permission_note">For security, older versions of Android might disable some features while the overlay is running. For example it might not be possible to install an application from an external source (the install button will not work). To fix this, it is enough to stop the service of this application while these features are required.</string>
    <string name="thermal_monitor">Thermal Monitor</string>
    <string name="info">Info</string>
    <string name="description_notification_channel_default">Used for the required persistent notification of the service.</string>
    <string name="global">Global</string>
    <string name="enable_root_features">Enable root features</string>
    <string name="overlay_permission_setting_summary">This Android system level setting needs to be enabled before the app is allowed to draw the overlay.</string>
    <string name="open_overlay_permission_setting">Open overlay permission setting</string>
    <string name="ui">UI</string>
    <string name="monitoring_modules">Monitoring Modules</string>
    <string name="cpu_frequency_monitor">CPU Frequency Monitor</string>
    <string name="check_compatibility_summary">Check the compatibility of this module with the current settings.</string>
    <string name="enable_cpu_frequency_monitoring">Enable CPU frequency monitoring</string>
    <string name="refresh_interval_summary">Choose the refresh interval to use in milliseconds.</string>
    <string name="refresh_interval">Refresh interval</string>
    <string name="enable_thermal_monitoring">Enable thermal monitoring</string>
    <string name="use_root_to_access_thermal_zones">Use root to access thermal zones</string>
    <string name="temperature_scale_summary">Choose the temperature scale to use.</string>
    <string name="temperature_scale">Temperature scale</string>
    <string name="thermal_zones_summary">Select the thermal zones to monitor.</string>
    <string name="thermal_zones">Thermal zones</string>
    <string name="overlay_position_summary">Choose the position of the overlay to appear in.</string>
    <string name="overlay_position">Overlay position</string>
    <string name="background_color_summary">Choose the background color and the transparency of the overlay.</string>
    <string name="background_color">Background color</string>
    <string name="text_color_summary">Choose the text color to use on the overlay.</string>
    <string name="text_color">Text color</string>
    <string name="text_size_summary">Choose the size of the text to use on the overlay.</string>
    <string name="text_size">Text size</string>
    <string name="show_labels">Show labels</string>
    <string name="label_width_summary">Choose the width used for the labels in the overlay.</string>
    <string name="label_width">Label width</string>
</resources>
