<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/global">
        <CheckBoxPreference
            app:defaultValue="false"
            app:key="rootEnabled"
            app:title="@string/enable_root_features" />
        <Preference
            app:isPreferenceVisible="false"
            app:key="dummyOverlaySettings"
            app:summary="@string/overlay_permission_setting_summary"
            app:title="@string/open_overlay_permission_setting" />
    </PreferenceCategory>

    <PreferenceCategory app:title="UI">
        <Preference
            app:fragment="com.gitlab.saschabrunner.thermalmonitor.main.ui.OverlaySettingsFragment"
            app:title="@string/overlay" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/monitoring_modules">
        <Preference
            app:fragment="com.gitlab.saschabrunner.thermalmonitor.thermal.ThermalMonitorSettingsFragment"
            app:title="@string/thermal_monitor" />
        <Preference
            app:fragment="com.gitlab.saschabrunner.thermalmonitor.cpufreq.CPUFrequencyMonitorSettingsFragment"
            app:title="@string/cpu_frequency_monitor" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>